fixed: logging of json objects to plaintext did collapse on one line

--- a/src/logger.css
+++ b/src/logger.css
@@ -2,6 +2,7 @@ plaintext#logger > *,
 #logger > * {
     width: *;
     padding-left: 4dip;
+    white-space: pre;
 }
 
 debug {
